--- a/sectionB.Rmd
+++ b/sectionB.Rmd
@@ -9,23 +9,20 @@ output:
     toc: yes
 ---
 
-# Example 1
+## section B 1
 
 - At times I like to be stand alone document, with three sections.
 - When included in master, my sections should really be sub-sections; help please?
 
 
-# Example 2
+## section B 2
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r }
 summary(cars)
 ```
 
-# Example 3
+## section B 3
 
 You can also embed plots, for example:
 
